# pj

./: README.md
API文档/: README.md  位置管理.md  座位管理.md  时间段管理.md  用户注册.md  用户登陆.md  用户管理.md  预约.md
backend/: app.db  app.py  pyproject.toml  settings.py
backend/auth/: __init__.py  dependencies.py
backend/backend/: README.md  alembic.ini  requirements.txt
backend/backend/alembic/: env.py
backend/backend/database/: models.py
backend/database/: __init__.py  connection.py  crud.py  mock_data.py  models.py  schemas.py
backend/mock_data/: data.py
backend/routes/: admin.py  auth.py  bookings.py  reservations.py  rooms.py  seats.py  time-slots.py  time_slots.py  users.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/dashboard/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/admin/: admin-reservation-list.tsx  admin-stats.tsx  checkin-stats.tsx  user-detail.tsx  user-management-list.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  auth-utils.ts  config.ts  date-utils.ts
frontend/services/: admin.ts  auth.ts  location.ts  reservation.ts  seat.ts  time-slot.ts  user.ts
myback/: app.db  models.py
myback/UserManagement/: models.py  views.py
myback/myback/: asgi.py  settings.py  urls.py  wsgi.py
stories/: 用户登陆.md
tests/backend/: test_auth.py  test_seats.py
(+20 files in other folders)
